# gait-experiments

./: CMakeLists.txt
libraries/fcontrol/: CMakeLists.txt  README.md
libraries/fcontrol/src/: KalmanFilter.cpp  KalmanFilter.hpp  LinearSystem.h  OnlineSystemIdentification.cpp  OnlineSystemIdentification.h  StateObserver.cpp  StateObserver.h  StateSpace.cpp  StateSpace.h  SystemTF.cpp  (+2 more)
programs/: OneFootStand.hpp
programs/oneFootStand/: CMakeLists.txt  OneFootStand.hpp
programs/squatAndBalance/: main.cpp
programs/stableGait/: TrajectoryGenerator.cpp
programs/stableGait 8 abril/: CMakeLists.txt  StepGenerator.cpp  TrajectoryGenerator.cpp  TrajectoryGenerator.cpp.autosave  TrajectoryGenerator.hpp  TrajectoryGenerator_copy.cpp  main.cpp
programs/stableGait V1/: CMakeLists.txt  LIMP.cpp  StepGenerator.cpp  TrajectoryGenerator.cpp  TrajectoryGenerator.hpp  main.cpp  main_copy.cpp
programs/stableGait _24_FEBRERO/: TargetBuilder.cpp  TrajectoryGenerator.cpp  TrajectoryGenerator.hpp
programs/stableGaitDinamics/: TrajectoryGenerator.cpp  TrajectoryGenerator.hpp  main.cpp
programs/stableGaitV2/: StepGenerator.cpp  TargetBuilder.cpp  TrajectoryGenerator.cpp  TrajectoryGenerator.cpp.autosave  TrajectoryGenerator.hpp  main.cpp
programs/stableGaitV3/: StepGenerator.hpp  TrajectoryGenerator.cpp  TrajectoryGenerator.cpp.autosave
programs/stableGaitV4/: TrajectoryGenerator.cpp  VelocityProfile_Custom_copy.cpp  main.cpp
programs/stableGait_10_abril/: main.cpp  main_copyv2.cpp  walkingRobot.cpp  walkingRobot.hpp
programs/stableGait_11_abril/: StepGenerator_copy.cpp  TrajectoryGenerator.cpp  TrajectoryGenerator.cpp.autosave  TrajectoryGenerator.hpp  main.cpp
programs/stableGait_19_Junio/: LIMP.cpp  StepGenerator.hpp  TargetBuilder.hpp  TrajectoryGenerator.cpp  TrajectoryGenerator.hpp  TrajectoryGenerator_19_jun.cpp  TrajectoryGenerator_real.cpp  main.cpp
programs/stableGait_22_febre_Funciona_FIrstStep/: TrajectoryGenerator.cpp  TrajectoryGenerator.hpp  main.cpp
programs/stableGait_23_Paso_Terminado/: LIMP.hpp  TargetBuilder.hpp  main.cpp
programs/stableGait_FUNCIONA/: LIMP.cpp  TrajectoryGenerator.cpp  TrajectoryGenerator.hpp  main.cpp
programs/stableGait_Gazebo/: CMakeLists.txt  LIMP.hpp  StepGenerator.cpp  TargetBuilder.cpp  TrajectoryGenerator (copia).cpp  TrajectoryGenerator.cpp  main.cpp  walkingRobot.cpp  walkingRobot.hpp
programs/zmpViewer/: CMakeLists.txt  ZmpViewer.cpp  ZmpViewer.hpp  ZmpViewer_copy.cpp
(+1 files in other folders)
